Remove links to JIRA from the ticket numbers in LLRN

--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.3.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.3.md
@@ -6,7 +6,7 @@ These are low-level release notes for IP Fabric release `4.3.3`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-7304](https://ipfabric.atlassian.net/browse/NIM-7304) -- Highest -- Snapshot loading - data preparation takes too long
-- [NIM-7308](https://ipfabric.atlassian.net/browse/NIM-7308) -- Highest -- By adjusting Snapshot settings, we overwrite Global settings
-- [NIM-7309](https://ipfabric.atlassian.net/browse/NIM-7309) -- Highest -- Tasker finish fail
-- [NIM-7314](https://ipfabric.atlassian.net/browse/NIM-7314) -- Highest -- Migration fails on "Cannot read property 'map' of undefined" when upgrading to 4.3.2+2
+- `NIM-7304` -- Highest -- Snapshot loading - data preparation takes too long
+- `NIM-7308` -- Highest -- By adjusting Snapshot settings, we overwrite Global settings
+- `NIM-7309` -- Highest -- Tasker finish fail
+- `NIM-7314` -- Highest -- Migration fails on "Cannot read property 'map' of undefined" when upgrading to 4.3.2+2
