--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.4.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.4.md
@@ -6,36 +6,36 @@ These are low-level release notes for IP Fabric release `4.3.4`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-6871](https://ipfabric.atlassian.net/browse/NIM-6871) -- High -- Cannot load snapshot - F5 related issue
-- [NIM-7255](https://ipfabric.atlassian.net/browse/NIM-7255) -- Medium -- ID seems to be required to create SiteSeparation rules
-- [NIM-7268](https://ipfabric.atlassian.net/browse/NIM-7268) -- High -- Missing devices in Virtual servers for F5
-- [NIM-7285](https://ipfabric.atlassian.net/browse/NIM-7285) -- Highest -- Snapshot recalculations take 36 hours
-- [NIM-7300](https://ipfabric.atlassian.net/browse/NIM-7300) -- High -- MPLS information missing on vEdge e2e not working
-- [NIM-7306](https://ipfabric.atlassian.net/browse/NIM-7306) -- Medium -- LB seems to be in a site that has no devices
-- [NIM-7307](https://ipfabric.atlassian.net/browse/NIM-7307) -- Medium -- 2 devices that should be in L66 site based on inventory are in other random site in maps
-- [NIM-7324](https://ipfabric.atlassian.net/browse/NIM-7324) -- High -- Network discovery fails if we start it with snapshot name or note
-- [NIM-7331](https://ipfabric.atlassian.net/browse/NIM-7331) -- Highest -- tasks/validateDoc - add vmware to the techSupportList
-- [NIM-7332](https://ipfabric.atlassian.net/browse/NIM-7332) -- Highest -- Unable to load previously created topology views
-- [NIM-7338](https://ipfabric.atlassian.net/browse/NIM-7338) -- High -- Tasker finish - switch to router no cdp, trunk with tag
-- [NIM-7342](https://ipfabric.atlassian.net/browse/NIM-7342) -- High -- Tasker finish, calc vlan - fix cdp query runs too long
-- [NIM-7347](https://ipfabric.atlassian.net/browse/NIM-7347) -- Medium -- Cannot get OS version H3C S5100-26C-EI
-- [NIM-7348](https://ipfabric.atlassian.net/browse/NIM-7348) -- Highest -- Cannot detect Fortinet device FortiGate-3140B
-- [NIM-7354](https://ipfabric.atlassian.net/browse/NIM-7354) -- Highest -- IP Fabric is not sending traffic through the proxy
-- [NIM-7357](https://ipfabric.atlassian.net/browse/NIM-7357) -- Medium -- Site appearing in table/snapshot-devices different from Site table/inventory/devices
-- [NIM-7359](https://ipfabric.atlassian.net/browse/NIM-7359) -- Medium -- Configuration Management is not downloading configurations
-- [NIM-7361](https://ipfabric.atlassian.net/browse/NIM-7361) -- Medium -- Arista - wrong Platform parsing - 7368-R
-- [NIM-7366](https://ipfabric.atlassian.net/browse/NIM-7366) -- Medium -- Error when opening Intent Rule verification in End Of Life Milestones page
-- [NIM-7369](https://ipfabric.atlassian.net/browse/NIM-7369) -- High -- BGP Neighbours are missing
-- [NIM-7371](https://ipfabric.atlassian.net/browse/NIM-7371) -- High -- Not functional routing over bgp
-- [NIM-7372](https://ipfabric.atlassian.net/browse/NIM-7372) -- High -- Jumphost testing - dev03 is not working
-- [NIM-7376](https://ipfabric.atlassian.net/browse/NIM-7376) -- Medium -- nsx-t wrong mapping of empty mac-table on l2port
-- [NIM-7377](https://ipfabric.atlassian.net/browse/NIM-7377) -- Medium -- Routing protocols void assign query on Bloomberg data takes too long
-- [NIM-7397](https://ipfabric.atlassian.net/browse/NIM-7397) -- Highest -- Updater doesn't save device
+- `NIM-6871` -- High -- Cannot load snapshot - F5 related issue
+- `NIM-7255` -- Medium -- ID seems to be required to create SiteSeparation rules
+- `NIM-7268` -- High -- Missing devices in Virtual servers for F5
+- `NIM-7285` -- Highest -- Snapshot recalculations take 36 hours
+- `NIM-7300` -- High -- MPLS information missing on vEdge e2e not working
+- `NIM-7306` -- Medium -- LB seems to be in a site that has no devices
+- `NIM-7307` -- Medium -- 2 devices that should be in L66 site based on inventory are in other random site in maps
+- `NIM-7324` -- High -- Network discovery fails if we start it with snapshot name or note
+- `NIM-7331` -- Highest -- tasks/validateDoc - add vmware to the techSupportList
+- `NIM-7332` -- Highest -- Unable to load previously created topology views
+- `NIM-7338` -- High -- Tasker finish - switch to router no cdp, trunk with tag
+- `NIM-7342` -- High -- Tasker finish, calc vlan - fix cdp query runs too long
+- `NIM-7347` -- Medium -- Cannot get OS version H3C S5100-26C-EI
+- `NIM-7348` -- Highest -- Cannot detect Fortinet device FortiGate-3140B
+- `NIM-7354` -- Highest -- IP Fabric is not sending traffic through the proxy
+- `NIM-7357` -- Medium -- Site appearing in table/snapshot-devices different from Site table/inventory/devices
+- `NIM-7359` -- Medium -- Configuration Management is not downloading configurations
+- `NIM-7361` -- Medium -- Arista - wrong Platform parsing - 7368-R
+- `NIM-7366` -- Medium -- Error when opening Intent Rule verification in End Of Life Milestones page
+- `NIM-7369` -- High -- BGP Neighbours are missing
+- `NIM-7371` -- High -- Not functional routing over bgp
+- `NIM-7372` -- High -- Jumphost testing - dev03 is not working
+- `NIM-7376` -- Medium -- nsx-t wrong mapping of empty mac-table on l2port
+- `NIM-7377` -- Medium -- Routing protocols void assign query on Bloomberg data takes too long
+- `NIM-7397` -- Highest -- Updater doesn't save device
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-7099](https://ipfabric.atlassian.net/browse/NIM-7099) -- Medium -- Cisco _aci folder
-- [NIM-7379](https://ipfabric.atlassian.net/browse/NIM-7379) -- Medium -- Failing -4.1.0 end-to-end path-lookup test
-- [NIM-7380](https://ipfabric.atlassian.net/browse/NIM-7380) -- High -- Failing -4.1.0 end-to-end path-lookup test
+- `NIM-7099` -- Medium -- Cisco _aci folder
+- `NIM-7379` -- Medium -- Failing -4.1.0 end-to-end path-lookup test
+- `NIM-7380` -- High -- Failing -4.1.0 end-to-end path-lookup test
