--- a/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.1.md
+++ b/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.1.md
@@ -6,4 +6,4 @@ These are low-level release notes for IP Fabric release `4.4.1`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-7744](https://ipfabric.atlassian.net/browse/NIM-7744) -- Highest -- Demo4 update 4.4.0 failed
+- `NIM-7744` -- Highest -- Demo4 update 4.4.0 failed
