--- a/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.2.md
+++ b/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.2.md
@@ -6,12 +6,12 @@ These are low-level release notes for IP Fabric release `4.4.2`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-7147](https://ipfabric.atlassian.net/browse/NIM-7147) -- Medium -- Login banner on Fortinet
-- [NIM-7781](https://ipfabric.atlassian.net/browse/NIM-7781) -- High -- Older VSS stopped showing up in the VSS table
-- [NIM-7796](https://ipfabric.atlassian.net/browse/NIM-7796) -- High -- Empty PIDs in EoL Detail table
+- `NIM-7147` -- Medium -- Login banner on Fortinet
+- `NIM-7781` -- High -- Older VSS stopped showing up in the VSS table
+- `NIM-7796` -- High -- Empty PIDs in EoL Detail table
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-7855](https://ipfabric.atlassian.net/browse/NIM-7855) -- Highest -- Use system proxy for Mist discovery
+- `NIM-7855` -- Highest -- Use system proxy for Mist discovery
