--- a/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.3.md
+++ b/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.3.md
@@ -6,15 +6,15 @@ These are low-level release notes for IP Fabric release `4.4.3`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-7934](https://ipfabric.atlassian.net/browse/NIM-7934) -- High -- Low Level Design Report is not having EoL dates correct
-- [NIM-7935](https://ipfabric.atlassian.net/browse/NIM-7935) -- High -- E2E path not correct over Viptela
-- [NIM-7936](https://ipfabric.atlassian.net/browse/NIM-7936) -- Medium -- Switching E2E source and dest doesn't bring expected results
-- [NIM-8009](https://ipfabric.atlassian.net/browse/NIM-8009) -- Highest -- GC of data in Redis is misbehaving / needs investigation
-- [NIM-8091](https://ipfabric.atlassian.net/browse/NIM-8091) -- Highest -- Devices already in the queue
-- [DOS-484](https://ipfabric.atlassian.net/browse/DOS-484) -- Medium -- Shell injection via backup password [Was: Any password containing # is making backup SFTP URL invalid]
+- `NIM-7934` -- High -- Low Level Design Report is not having EoL dates correct
+- `NIM-7935` -- High -- E2E path not correct over Viptela
+- `NIM-7936` -- Medium -- Switching E2E source and dest doesn't bring expected results
+- `NIM-8009` -- Highest -- GC of data in Redis is misbehaving / needs investigation
+- `NIM-8091` -- Highest -- Devices already in the queue
+- `DOS-484` -- Medium -- Shell injection via backup password [Was: Any password containing # is making backup SFTP URL invalid]
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-7885](https://ipfabric.atlassian.net/browse/NIM-7885) -- High -- Juniper SRX empty Zone FW table
+- `NIM-7885` -- High -- Juniper SRX empty Zone FW table
