--- a/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.1.md
+++ b/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.1.md
@@ -6,88 +6,88 @@ These are low-level release notes for IP Fabric release `5.0.1`. Please note, th
 
 Epics are high-level features, that may consist of many tasks.
 
-- [DOS-677](https://ipfabric.atlassian.net/browse/DOS-677) -- Medium -- release 5.0.1
+- `DOS-677` -- Medium -- release 5.0.1
 
 ## Bugs
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-4387](https://ipfabric.atlassian.net/browse/NIM-4387) -- High -- Remove eDuplicit table and queries
-- [NIM-6936](https://ipfabric.atlassian.net/browse/NIM-6936) -- High -- When MDPS is enabled on CP firewalls, we fail to discover them
-- [NIM-8451](https://ipfabric.atlassian.net/browse/NIM-8451) -- Medium -- Better way to check if discovery is running during upgrade
-- [NIM-8520](https://ipfabric.atlassian.net/browse/NIM-8520) -- Medium -- UX/UI Tree picker vs remove item button
-- [NIM-8553](https://ipfabric.atlassian.net/browse/NIM-8553) -- Medium -- Brocade - refactor fastiron/span cmd to tableColumnParser
-- [NIM-8555](https://ipfabric.atlassian.net/browse/NIM-8555) -- Medium -- commands/cisco/_meraki/v1/organizations/devices - API input validation fix
-- [NIM-8556](https://ipfabric.atlassian.net/browse/NIM-8556) -- Medium -- commands/cisco/_meraki/v1/organizations/devices/statuses - API input validation fix
-- [NIM-8569](https://ipfabric.atlassian.net/browse/NIM-8569) -- Medium -- AWS routing table - same nexthops in one route
-- [NIM-8581](https://ipfabric.atlassian.net/browse/NIM-8581) -- Highest -- Manual Site Separation Does not work in 5.0
-- [NIM-8582](https://ipfabric.atlassian.net/browse/NIM-8582) -- Medium -- Site Name Change Popup does not go away
-- [NIM-8588](https://ipfabric.atlassian.net/browse/NIM-8588) -- Medium -- RSVP on diagram - can't show detail
-- [NIM-8593](https://ipfabric.atlassian.net/browse/NIM-8593) -- Medium -- Diagrams API Documentation is incorrect.
-- [NIM-8594](https://ipfabric.atlassian.net/browse/NIM-8594) -- Medium -- createNonSystemRoles fails if there's manually created role with name eq roleId
-- [NIM-8606](https://ipfabric.atlassian.net/browse/NIM-8606) -- Medium -- Unable to open path verification record
-- [NIM-8617](https://ipfabric.atlassian.net/browse/NIM-8617) -- Medium -- Azure subscription id must not be removed from logs
-- [NIM-8661](https://ipfabric.atlassian.net/browse/NIM-8661) -- Highest -- Devices routing table mixed with routes from different device
-- [NIM-8662](https://ipfabric.atlassian.net/browse/NIM-8662) -- High -- SNMP doesn't work after migration to 5.0
-- [NIM-8664](https://ipfabric.atlassian.net/browse/NIM-8664) -- Low -- Unable to change timezone for LDAP user
-- [NIM-8665](https://ipfabric.atlassian.net/browse/NIM-8665) -- High -- Palo Alto -- OOB management interface, route hairpin
-- [NIM-8666](https://ipfabric.atlassian.net/browse/NIM-8666) -- High -- NSX - Inconsistent discovery data in 5.0.0
-- [NIM-8673](https://ipfabric.atlassian.net/browse/NIM-8673) -- Medium -- SNMP service isn't restarted on config update
-- [NIM-8682](https://ipfabric.atlassian.net/browse/NIM-8682) -- High -- Palo Alto IP address missing on interface
-- [NIM-8746](https://ipfabric.atlassian.net/browse/NIM-8746) -- Highest -- API Token - Unable to fetch data in UI
-- [NIM-8762](https://ipfabric.atlassian.net/browse/NIM-8762) -- Medium -- NSX-T wrong mapping of t1c routes
-- [NIM-8784](https://ipfabric.atlassian.net/browse/NIM-8784) -- Highest -- API tokens with admin role return insufficient rights
-- [NIM-8791](https://ipfabric.atlassian.net/browse/NIM-8791) -- High -- v5.0.1 - updating a widget in Dashboard returns 500 Internal Server Error
-- [NIM-8837](https://ipfabric.atlassian.net/browse/NIM-8837) -- Medium -- Discovery History - devices not appearing in the History table, due to pagination missing
-- [NIM-8841](https://ipfabric.atlassian.net/browse/NIM-8841) -- Highest -- Logs get deleted, but they are still open by the service
-- [DOS-570](https://ipfabric.atlassian.net/browse/DOS-570) -- Highest -- nimpeeMigrate failing
-- [DOS-600](https://ipfabric.atlassian.net/browse/DOS-600) -- High -- IPF5.0 discovery is running from old services location
-- [DOS-608](https://ipfabric.atlassian.net/browse/DOS-608) -- High -- Missing expect package
-- [DOS-618](https://ipfabric.atlassian.net/browse/DOS-618) -- Medium -- sys-scale-workers is accessing old locations of services
-- [DOS-631](https://ipfabric.atlassian.net/browse/DOS-631) -- Highest -- nimpee-install Missing sshpass
-- [DOS-632](https://ipfabric.atlassian.net/browse/DOS-632) -- Highest -- nimpee-install - error in sys-backup-duplicity.sh - missing paramiko
+- `NIM-4387` -- High -- Remove eDuplicit table and queries
+- `NIM-6936` -- High -- When MDPS is enabled on CP firewalls, we fail to discover them
+- `NIM-8451` -- Medium -- Better way to check if discovery is running during upgrade
+- `NIM-8520` -- Medium -- UX/UI Tree picker vs remove item button
+- `NIM-8553` -- Medium -- Brocade - refactor fastiron/span cmd to tableColumnParser
+- `NIM-8555` -- Medium -- commands/cisco/_meraki/v1/organizations/devices - API input validation fix
+- `NIM-8556` -- Medium -- commands/cisco/_meraki/v1/organizations/devices/statuses - API input validation fix
+- `NIM-8569` -- Medium -- AWS routing table - same nexthops in one route
+- `NIM-8581` -- Highest -- Manual Site Separation Does not work in 5.0
+- `NIM-8582` -- Medium -- Site Name Change Popup does not go away
+- `NIM-8588` -- Medium -- RSVP on diagram - can't show detail
+- `NIM-8593` -- Medium -- Diagrams API Documentation is incorrect.
+- `NIM-8594` -- Medium -- createNonSystemRoles fails if there's manually created role with name eq roleId
+- `NIM-8606` -- Medium -- Unable to open path verification record
+- `NIM-8617` -- Medium -- Azure subscription id must not be removed from logs
+- `NIM-8661` -- Highest -- Devices routing table mixed with routes from different device
+- `NIM-8662` -- High -- SNMP doesn't work after migration to 5.0
+- `NIM-8664` -- Low -- Unable to change timezone for LDAP user
+- `NIM-8665` -- High -- Palo Alto -- OOB management interface, route hairpin
+- `NIM-8666` -- High -- NSX - Inconsistent discovery data in 5.0.0
+- `NIM-8673` -- Medium -- SNMP service isn't restarted on config update
+- `NIM-8682` -- High -- Palo Alto IP address missing on interface
+- `NIM-8746` -- Highest -- API Token - Unable to fetch data in UI
+- `NIM-8762` -- Medium -- NSX-T wrong mapping of t1c routes
+- `NIM-8784` -- Highest -- API tokens with admin role return insufficient rights
+- `NIM-8791` -- High -- v5.0.1 - updating a widget in Dashboard returns 500 Internal Server Error
+- `NIM-8837` -- Medium -- Discovery History - devices not appearing in the History table, due to pagination missing
+- `NIM-8841` -- Highest -- Logs get deleted, but they are still open by the service
+- `DOS-570` -- Highest -- nimpeeMigrate failing
+- `DOS-600` -- High -- IPF5.0 discovery is running from old services location
+- `DOS-608` -- High -- Missing expect package
+- `DOS-618` -- Medium -- sys-scale-workers is accessing old locations of services
+- `DOS-631` -- Highest -- nimpee-install Missing sshpass
+- `DOS-632` -- Highest -- nimpee-install - error in sys-backup-duplicity.sh - missing paramiko
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-8187](https://ipfabric.atlassian.net/browse/NIM-8187) -- Medium -- Cisco FabricPath implementation
-- [NIM-8585](https://ipfabric.atlassian.net/browse/NIM-8585) -- Medium -- Fortinet NAT Discovery logic issue
-- [NIM-8589](https://ipfabric.atlassian.net/browse/NIM-8589) -- High -- API tokens - replace scope with RBAC roles
-- [NIM-8592](https://ipfabric.atlassian.net/browse/NIM-8592) -- Medium -- FortiGate - change type for NAT pool addresses
-- [NIM-8607](https://ipfabric.atlassian.net/browse/NIM-8607) -- Medium -- Add all discovery tasks to @ipfabric/utils
-- [NIM-8611](https://ipfabric.atlassian.net/browse/NIM-8611) -- Medium -- /settings/api-tokens - replace scope with RBAC roles
-- [DOS-54](https://ipfabric.atlassian.net/browse/DOS-54) -- High -- Jumphost servers don't run on python3
-- [DOS-345](https://ipfabric.atlassian.net/browse/DOS-345) -- High -- Package API service as a debian package (kw: deb api pkg)
-- [DOS-393](https://ipfabric.atlassian.net/browse/DOS-393) -- Highest -- Update tooling for Debian 11 migration
-- [DOS-405](https://ipfabric.atlassian.net/browse/DOS-405) -- Medium -- Investigate posibility of directly updating to debian 11
-- [DOS-425](https://ipfabric.atlassian.net/browse/DOS-425) -- Medium -- Improve product nginx configuration from the security perspective (kw TLS1.2, 1.2)
-- [DOS-435](https://ipfabric.atlassian.net/browse/DOS-435) -- Highest -- Update image / update / dev build "scripts" (i.e. "devOps" scripts) to node 16 [waiting for devs to prepare sources for migration to node 16]
-- [DOS-466](https://ipfabric.atlassian.net/browse/DOS-466) -- Low -- Add sar archives to techsupport packing
-- [DOS-511](https://ipfabric.atlassian.net/browse/DOS-511) -- Highest -- create hetzner image for 5.0.x appliance on debian 11
-- [DOS-539](https://ipfabric.atlassian.net/browse/DOS-539) -- Medium -- nimpee-install-2.0 - Linux kernel is never uninstalled in product
-- [DOS-548](https://ipfabric.atlassian.net/browse/DOS-548) -- Medium -- create nimpee discovery deb package
-- [DOS-549](https://ipfabric.atlassian.net/browse/DOS-549) -- Medium -- create nimpee webng deb package
-- [DOS-550](https://ipfabric.atlassian.net/browse/DOS-550) -- Medium -- create nimpee update service deb package
-- [DOS-551](https://ipfabric.atlassian.net/browse/DOS-551) -- Medium -- create nimpee init (nimpeeMigrate) database deb package
-- [DOS-552](https://ipfabric.atlassian.net/browse/DOS-552) -- Medium -- create nimpee webhook-worker deb package
-- [DOS-559](https://ipfabric.atlassian.net/browse/DOS-559) -- Highest -- net-config removes nimpee-conf-required only when triggered in fist boot mode
-- [DOS-569](https://ipfabric.atlassian.net/browse/DOS-569) -- Medium -- make net-config work with IPF 5.0
-- [DOS-575](https://ipfabric.atlassian.net/browse/DOS-575) -- Low -- nimpee-install - validate that all user-replaceable/editable files are handled properly
-- [DOS-587](https://ipfabric.atlassian.net/browse/DOS-587) -- Medium -- Implement TCPKeepAlive and/or ServerAliveInterval for jumphost ssh traffic
-- [DOS-597](https://ipfabric.atlassian.net/browse/DOS-597) -- Medium -- consider raising fileno limit for arangodb
-- [DOS-610](https://ipfabric.atlassian.net/browse/DOS-610) -- Medium -- Please let arango db listen on 0.0.0.0 in the product for debugging purposes
-- [DOS-629](https://ipfabric.atlassian.net/browse/DOS-629) -- High -- Do not enable discovery services during package installation
-- [DOS-672](https://ipfabric.atlassian.net/browse/DOS-672) -- Medium -- Promote ipf-appliance 5.0.0+47 versions to prod deb repository
-- [DOS-678](https://ipfabric.atlassian.net/browse/DOS-678) -- Medium -- Upgrade arangodb to latest patch for 5.0.1 release
+- `NIM-8187` -- Medium -- Cisco FabricPath implementation
+- `NIM-8585` -- Medium -- Fortinet NAT Discovery logic issue
+- `NIM-8589` -- High -- API tokens - replace scope with RBAC roles
+- `NIM-8592` -- Medium -- FortiGate - change type for NAT pool addresses
+- `NIM-8607` -- Medium -- Add all discovery tasks to @ipfabric/utils
+- `NIM-8611` -- Medium -- /settings/api-tokens - replace scope with RBAC roles
+- `DOS-54` -- High -- Jumphost servers don't run on python3
+- `DOS-345` -- High -- Package API service as a debian package (kw: deb api pkg)
+- `DOS-393` -- Highest -- Update tooling for Debian 11 migration
+- `DOS-405` -- Medium -- Investigate posibility of directly updating to debian 11
+- `DOS-425` -- Medium -- Improve product nginx configuration from the security perspective (kw TLS1.2, 1.2)
+- `DOS-435` -- Highest -- Update image / update / dev build "scripts" (i.e. "devOps" scripts) to node 16 [waiting for devs to prepare sources for migration to node 16]
+- `DOS-466` -- Low -- Add sar archives to techsupport packing
+- `DOS-511` -- Highest -- create hetzner image for 5.0.x appliance on debian 11
+- `DOS-539` -- Medium -- nimpee-install-2.0 - Linux kernel is never uninstalled in product
+- `DOS-548` -- Medium -- create nimpee discovery deb package
+- `DOS-549` -- Medium -- create nimpee webng deb package
+- `DOS-550` -- Medium -- create nimpee update service deb package
+- `DOS-551` -- Medium -- create nimpee init (nimpeeMigrate) database deb package
+- `DOS-552` -- Medium -- create nimpee webhook-worker deb package
+- `DOS-559` -- Highest -- net-config removes nimpee-conf-required only when triggered in fist boot mode
+- `DOS-569` -- Medium -- make net-config work with IPF 5.0
+- `DOS-575` -- Low -- nimpee-install - validate that all user-replaceable/editable files are handled properly
+- `DOS-587` -- Medium -- Implement TCPKeepAlive and/or ServerAliveInterval for jumphost ssh traffic
+- `DOS-597` -- Medium -- consider raising fileno limit for arangodb
+- `DOS-610` -- Medium -- Please let arango db listen on 0.0.0.0 in the product for debugging purposes
+- `DOS-629` -- High -- Do not enable discovery services during package installation
+- `DOS-672` -- Medium -- Promote ipf-appliance 5.0.0+47 versions to prod deb repository
+- `DOS-678` -- Medium -- Upgrade arangodb to latest patch for 5.0.1 release
 
 ## Sub-Tasks
 
 Sub-tasks are very well contained work packages, organized under Tasks.
 
-- [NIM-8355](https://ipfabric.atlassian.net/browse/NIM-8355) -- Medium -- Prepare Check Point R81.10 image in EVE
-- [NIM-8612](https://ipfabric.atlassian.net/browse/NIM-8612) -- High -- Create a task/cmd for fetching CMD output from customer for Fabric Path implementation.
-- [NIM-8674](https://ipfabric.atlassian.net/browse/NIM-8674) -- Medium -- NSX-T wrong mapping for segments without admin_state
-- [NIM-8678](https://ipfabric.atlassian.net/browse/NIM-8678) -- Medium -- NSX-T wrong T0 router id
-- [NIM-8680](https://ipfabric.atlassian.net/browse/NIM-8680) -- High -- NSX-T private T1 routers without uplink to public network
-- [NIM-8681](https://ipfabric.atlassian.net/browse/NIM-8681) -- Medium -- NSX-T empty responses for api calls for T1 and T0 routers
+- `NIM-8355` -- Medium -- Prepare Check Point R81.10 image in EVE
+- `NIM-8612` -- High -- Create a task/cmd for fetching CMD output from customer for Fabric Path implementation.
+- `NIM-8674` -- Medium -- NSX-T wrong mapping for segments without admin_state
+- `NIM-8678` -- Medium -- NSX-T wrong T0 router id
+- `NIM-8680` -- High -- NSX-T private T1 routers without uplink to public network
+- `NIM-8681` -- Medium -- NSX-T empty responses for api calls for T1 and T0 routers
