--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.1.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.1.md
@@ -6,10 +6,10 @@ These are low-level release notes for IP Fabric release `4.3.1`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-7246](https://ipfabric.atlassian.net/browse/NIM-7246) -- Highest -- Hostnames are missing
+- `NIM-7246` -- Highest -- Hostnames are missing
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-6446](https://ipfabric.atlassian.net/browse/NIM-6446) -- Medium -- HP Aruba CX Logging
+- `NIM-6446` -- Medium -- HP Aruba CX Logging
