--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.2.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.2.md
@@ -6,23 +6,23 @@ These are low-level release notes for IP Fabric release `4.3.2`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-7257](https://ipfabric.atlassian.net/browse/NIM-7257) -- Medium -- HP Aruba CX Logging - fix parsing of persistent storage
-- [NIM-7267](https://ipfabric.atlassian.net/browse/NIM-7267) -- Highest -- 4.3.0 OVA build failed
-- [NIM-7270](https://ipfabric.atlassian.net/browse/NIM-7270) -- Medium -- Fix typo in UI
-- [NIM-7272](https://ipfabric.atlassian.net/browse/NIM-7272) -- Highest -- 4.3.0 Migration fail on "threshold"
-- [NIM-7273](https://ipfabric.atlassian.net/browse/NIM-7273) -- High -- FortiGate - possibly wrong MAC on link agg on cluster unit
-- [NIM-7275](https://ipfabric.atlassian.net/browse/NIM-7275) -- High -- Unexpected error in /platforms/vdc/devices table
-- [NIM-7276](https://ipfabric.atlassian.net/browse/NIM-7276) -- Low -- Hostname ends with a newline
-- [NIM-7278](https://ipfabric.atlassian.net/browse/NIM-7278) -- Highest -- All Palo Alto firewalls (226) show fatal error - only 2 palo altos discovered correctly
-- [NIM-7279](https://ipfabric.atlassian.net/browse/NIM-7279) -- Medium -- Bugfix: commands/mikrotik/_routeros/interface - Tesco (4.3.1+1)
-- [NIM-7295](https://ipfabric.atlassian.net/browse/NIM-7295) -- Highest -- Airbus 4.2.0 migration to 4.3.2+1 fail
-- [NIM-7298](https://ipfabric.atlassian.net/browse/NIM-7298) -- Highest -- Can't show graph with hidden transit or clouds
-- [DOS-363](https://ipfabric.atlassian.net/browse/DOS-363) -- Highest -- Jumphosts on 4.3.1 release does not seem to work
+- `NIM-7257` -- Medium -- HP Aruba CX Logging - fix parsing of persistent storage
+- `NIM-7267` -- Highest -- 4.3.0 OVA build failed
+- `NIM-7270` -- Medium -- Fix typo in UI
+- `NIM-7272` -- Highest -- 4.3.0 Migration fail on "threshold"
+- `NIM-7273` -- High -- FortiGate - possibly wrong MAC on link agg on cluster unit
+- `NIM-7275` -- High -- Unexpected error in /platforms/vdc/devices table
+- `NIM-7276` -- Low -- Hostname ends with a newline
+- `NIM-7278` -- Highest -- All Palo Alto firewalls (226) show fatal error - only 2 palo altos discovered correctly
+- `NIM-7279` -- Medium -- Bugfix: commands/mikrotik/_routeros/interface - Tesco (4.3.1+1)
+- `NIM-7295` -- Highest -- Airbus 4.2.0 migration to 4.3.2+1 fail
+- `NIM-7298` -- Highest -- Can't show graph with hidden transit or clouds
+- `DOS-363` -- Highest -- Jumphosts on 4.3.1 release does not seem to work
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-7145](https://ipfabric.atlassian.net/browse/NIM-7145) -- Medium -- CheckPoint apiUid - make it less strict
-- [NIM-7212](https://ipfabric.atlassian.net/browse/NIM-7212) -- High -- Use new Meraki vendor API client
-- [NIM-7234](https://ipfabric.atlassian.net/browse/NIM-7234) -- Medium -- migration: avoid scheduling the same job multiple times
+- `NIM-7145` -- Medium -- CheckPoint apiUid - make it less strict
+- `NIM-7212` -- High -- Use new Meraki vendor API client
+- `NIM-7234` -- Medium -- migration: avoid scheduling the same job multiple times
