--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.5.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.5.md
@@ -6,4 +6,4 @@ These are low-level release notes for IP Fabric release `4.3.5`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-7420](https://ipfabric.atlassian.net/browse/NIM-7420) -- Highest -- Many Routing sessions (BGP & OSPF) lose their neighbor information and now go to Transit - corrupt snapshots?
+- `NIM-7420` -- Highest -- Many Routing sessions (BGP & OSPF) lose their neighbor information and now go to Transit - corrupt snapshots?
