--- a/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
@@ -6,218 +6,218 @@ These are low-level release notes for IP Fabric release `4.4.0`. Please note, th
 
 Epics are high-level features, that may consist of many tasks.
 
-- [NIM-7020](https://ipfabric.atlassian.net/browse/NIM-7020) -- High -- Viptela - cEdge fixes
+- `NIM-7020` -- High -- Viptela - cEdge fixes
 
 ## Stories
 
 Stories are high-level features, that may consist of many tasks. These would typically cover extensive functionality in IP Fabric
 
-- [NIM-7061](https://ipfabric.atlassian.net/browse/NIM-7061) -- Medium -- Case insensitive equal filter
+- `NIM-7061` -- Medium -- Case insensitive equal filter
 
 ## Bugs
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-5094](https://ipfabric.atlassian.net/browse/NIM-5094) -- Medium -- XDP Endpoints show network devices as endpoints
-- [NIM-5466](https://ipfabric.atlassian.net/browse/NIM-5466) -- Highest -- Vendor API - correct error msg
-- [NIM-6073](https://ipfabric.atlassian.net/browse/NIM-6073) -- Medium -- Missing phones in graphs
-- [NIM-6171](https://ipfabric.atlassian.net/browse/NIM-6171) -- Medium -- ArubaCX - add AAA support
-- [NIM-6496](https://ipfabric.atlassian.net/browse/NIM-6496) -- Medium -- Bugfix: commands/cisco/acl
-- [NIM-6773](https://ipfabric.atlassian.net/browse/NIM-6773) -- High -- Connectivity Report - Rediscovry - Sellect All
-- [NIM-6778](https://ipfabric.atlassian.net/browse/NIM-6778) -- High -- technology/routing/path-verifications - Add Path button
-- [NIM-6785](https://ipfabric.atlassian.net/browse/NIM-6785) -- Medium -- Juniper Junos - Route Instance Detail private tables filtering
-- [NIM-6843](https://ipfabric.atlassian.net/browse/NIM-6843) -- Highest -- Global tables should always be displayed
-- [NIM-6845](https://ipfabric.atlassian.net/browse/NIM-6845) -- Low -- Snapshot Management - ADD action vs Vendor API settings
-- [NIM-7009](https://ipfabric.atlassian.net/browse/NIM-7009) -- Medium -- Bugfix: commands/cisco/_viptela/v1/arp
-- [NIM-7010](https://ipfabric.atlassian.net/browse/NIM-7010) -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/neighbors
-- [NIM-7011](https://ipfabric.atlassian.net/browse/NIM-7011) -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/summary
-- [NIM-7012](https://ipfabric.atlassian.net/browse/NIM-7012) -- Medium -- Bugfix: commands/cisco/_viptela/v1/hardware/inventory
-- [NIM-7013](https://ipfabric.atlassian.net/browse/NIM-7013) -- Medium -- Bugfix: commands/cisco/_viptela/v1/interface
-- [NIM-7014](https://ipfabric.atlassian.net/browse/NIM-7014) -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/interface
-- [NIM-7015](https://ipfabric.atlassian.net/browse/NIM-7015) -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/neighbor
-- [NIM-7016](https://ipfabric.atlassian.net/browse/NIM-7016) -- Medium -- Bugfix: commands/cisco/_viptela/v1/vrrp
-- [NIM-7055](https://ipfabric.atlassian.net/browse/NIM-7055) -- Medium -- Bugfix: commands/cisco/_viptela/v1/omp/services
-- [NIM-7135](https://ipfabric.atlassian.net/browse/NIM-7135) -- High -- Webhooks - cut off select in modal
-- [NIM-7182](https://ipfabric.atlassian.net/browse/NIM-7182) -- High -- Broken buttons in Add Vendor dialog
-- [NIM-7193](https://ipfabric.atlassian.net/browse/NIM-7193) -- Medium -- nsx-t api wrong status code 400
-- [NIM-7194](https://ipfabric.atlassian.net/browse/NIM-7194) -- High -- Cisco StackWise Virtual
-- [NIM-7239](https://ipfabric.atlassian.net/browse/NIM-7239) -- Medium -- vmware NSX-T API no response for get method
-- [NIM-7254](https://ipfabric.atlassian.net/browse/NIM-7254) -- Highest -- Migration failed - vPathLookupCheck contains corrupted data
-- [NIM-7281](https://ipfabric.atlassian.net/browse/NIM-7281) -- Medium -- Bugfix: commands/mikrotik/_routeros/systemLoggingAction
-- [NIM-7283](https://ipfabric.atlassian.net/browse/NIM-7283) -- Medium -- Rebuild version not collected for nx-os
-- [NIM-7313](https://ipfabric.atlassian.net/browse/NIM-7313) -- Medium -- Device Attributes - Column "Value" not filterable
-- [NIM-7316](https://ipfabric.atlassian.net/browse/NIM-7316) -- Medium -- Cloned Locked Snapshot shows Locked in Unloaded state
-- [NIM-7352](https://ipfabric.atlassian.net/browse/NIM-7352) -- Medium -- Incorrect algorithms in API graph response
-- [NIM-7363](https://ipfabric.atlassian.net/browse/NIM-7363) -- Medium -- HP Aruba CX igmp querry interval - fix
-- [NIM-7365](https://ipfabric.atlassian.net/browse/NIM-7365) -- Medium -- Missing apiVersion in Ruckus VSZ POST schema
-- [NIM-7373](https://ipfabric.atlassian.net/browse/NIM-7373) -- Medium -- Snapshot that failed to load can't be loaded again
-- [NIM-7387](https://ipfabric.atlassian.net/browse/NIM-7387) -- Medium -- Frontend is stuck when snapshot load fails
-- [NIM-7394](https://ipfabric.atlassian.net/browse/NIM-7394) -- High -- tasks/l2Interfaces/extreme - missing interfaces
-- [NIM-7398](https://ipfabric.atlassian.net/browse/NIM-7398) -- Medium -- PaloAlto in globalVsys aad IPSec task
-- [NIM-7406](https://ipfabric.atlassian.net/browse/NIM-7406) -- Medium -- The locked snapshot can be modified
-- [NIM-7417](https://ipfabric.atlassian.net/browse/NIM-7417) -- Medium -- [API refactoring] SnapshotloadJob fail
-- [NIM-7422](https://ipfabric.atlassian.net/browse/NIM-7422) -- High -- No FW rules for Checkpoint devices
-- [NIM-7426](https://ipfabric.atlassian.net/browse/NIM-7426) -- Medium -- [API refactoring] CleanDBJob fail
-- [NIM-7429](https://ipfabric.atlassian.net/browse/NIM-7429) -- Medium -- Bad hostname detection on Brocade switch
-- [NIM-7432](https://ipfabric.atlassian.net/browse/NIM-7432) -- High -- Multicast source table - link to pathlookup is broken
-- [NIM-7434](https://ipfabric.atlassian.net/browse/NIM-7434) -- Medium -- Bugfix: commands/versa/_vos/vnms/dashboard/appliance/vrrp
-- [NIM-7435](https://ipfabric.atlassian.net/browse/NIM-7435) -- Medium -- Bugfix: commands/arista/_eos/vxlan/interfaceVxlan
-- [NIM-7439](https://ipfabric.atlassian.net/browse/NIM-7439) -- Highest -- Graph - Can't open any site
-- [NIM-7440](https://ipfabric.atlassian.net/browse/NIM-7440) -- Medium -- Weird error during maintenance
-- [NIM-7441](https://ipfabric.atlassian.net/browse/NIM-7441) -- Medium -- Cannot load previous snapshot
-- [NIM-7445](https://ipfabric.atlassian.net/browse/NIM-7445) -- High -- Cisco PID is parsed incorrectly (regular expression doesn't match +)
-- [NIM-7447](https://ipfabric.atlassian.net/browse/NIM-7447) -- High -- Failures When Caching Graph Nodes in Snapshotload Job
-- [NIM-7449](https://ipfabric.atlassian.net/browse/NIM-7449) -- High -- NSX-t wrong mapping of edgeCluster members
-- [NIM-7453](https://ipfabric.atlassian.net/browse/NIM-7453) -- High -- Hosts table is not showing for a specific ios-xe devices
-- [NIM-7461](https://ipfabric.atlassian.net/browse/NIM-7461) -- Medium -- Dev02 Update Unloads All Snapshots
-- [NIM-7465](https://ipfabric.atlassian.net/browse/NIM-7465) -- High -- Graph Intent Checks - doens't work after TSSTRICT refactor
-- [NIM-7470](https://ipfabric.atlassian.net/browse/NIM-7470) -- High -- L3 gateway table still not correct
-- [NIM-7474](https://ipfabric.atlassian.net/browse/NIM-7474) -- Medium -- AQL: lock timeout (while loading collections)
-- [NIM-7479](https://ipfabric.atlassian.net/browse/NIM-7479) -- High -- Continuous Azure discovery
-- [NIM-7486](https://ipfabric.atlassian.net/browse/NIM-7486) -- Highest -- Cloned snapshot does not retain site separation from original
-- [NIM-7492](https://ipfabric.atlassian.net/browse/NIM-7492) -- Medium -- Delete device from snapshot is super slow
-- [NIM-7504](https://ipfabric.atlassian.net/browse/NIM-7504) -- High -- Invalid credentials fail on unexpected failure
-- [NIM-7505](https://ipfabric.atlassian.net/browse/NIM-7505) -- Highest -- Meraki discovery stuck (APIv1)
-- [NIM-7512](https://ipfabric.atlassian.net/browse/NIM-7512) -- Highest -- Starting snapshot doesn't start and moves user to SSH/Telnet tab without telling why
-- [NIM-7513](https://ipfabric.atlassian.net/browse/NIM-7513) -- High -- Site Separation - Migration issue from v4.2 to v4.3.x - CGI
-- [NIM-7518](https://ipfabric.atlassian.net/browse/NIM-7518) -- High -- "Unexpected null or undefined" when radial view on a topology with 1+ node out of tree
-- [NIM-7523](https://ipfabric.atlassian.net/browse/NIM-7523) -- Highest -- Error while transforming an array chunk in a stream: SyntaxError: Unexpected end of JSON input
-- [NIM-7531](https://ipfabric.atlassian.net/browse/NIM-7531) -- Highest -- Missing labels in Meraki vendor form
-- [NIM-7539](https://ipfabric.atlassian.net/browse/NIM-7539) -- High -- Tasker finish routing protocols dstIntName missing (Pathlookup multicast forwarding)
-- [NIM-7550](https://ipfabric.atlassian.net/browse/NIM-7550) -- High -- xDP connections to the same device are pointed to the transit
-- [NIM-7556](https://ipfabric.atlassian.net/browse/NIM-7556) -- Medium -- Bugfix: commands/paloalto/showConfigPushedSharedPolicyVsys
-- [NIM-7557](https://ipfabric.atlassian.net/browse/NIM-7557) -- Medium -- Bugfix: commands/versa/_vos/vnms/dashboard/appliance/sdWanSites
-- [NIM-7558](https://ipfabric.atlassian.net/browse/NIM-7558) -- Medium -- Bugfix: commands/mikrotik/_routeros/ipRoute
-- [NIM-7559](https://ipfabric.atlassian.net/browse/NIM-7559) -- Medium -- Bugfix: commands/cisco/routingTable
-- [NIM-7561](https://ipfabric.atlassian.net/browse/NIM-7561) -- Highest -- xDP connections between HP Aruba AP & HP Arubasw are pointed to the transit
-- [NIM-7566](https://ipfabric.atlassian.net/browse/NIM-7566) -- Highest -- Ruckus API with invalid URL says that apiVersion is wrong
-- [NIM-7570](https://ipfabric.atlassian.net/browse/NIM-7570) -- Highest -- Ruckus is not in the list of API vendors
-- [NIM-7572](https://ipfabric.atlassian.net/browse/NIM-7572) -- High -- [4.4.0+1] unspecified command for API vendors
-- [NIM-7574](https://ipfabric.atlassian.net/browse/NIM-7574) -- High -- Cisco APIC is available in Vendor API settings
-- [NIM-7575](https://ipfabric.atlassian.net/browse/NIM-7575) -- High -- API Jobs unspecified command
-- [NIM-7579](https://ipfabric.atlassian.net/browse/NIM-7579) -- High -- Broken BFS layouting
-- [NIM-7582](https://ipfabric.atlassian.net/browse/NIM-7582) -- High -- Broken BFS layouting - release/4.4.0
-- [NIM-7583](https://ipfabric.atlassian.net/browse/NIM-7583) -- Highest -- [4.4.0+1] Delete user button is white with white text
-- [NIM-7584](https://ipfabric.atlassian.net/browse/NIM-7584) -- High -- CLONE - unspecified command for API vendors
-- [NIM-7586](https://ipfabric.atlassian.net/browse/NIM-7586) -- Highest -- [4.4.0+1] Missing delete icon
-- [NIM-7588](https://ipfabric.atlassian.net/browse/NIM-7588) -- Highest -- [4.4.0+1] Empty host detail in pathlookup
-- [NIM-7594](https://ipfabric.atlassian.net/browse/NIM-7594) -- Highest -- [v4.4.0+1] - Mangement/Changes -> empty table when comparing snapshot
-- [NIM-7597](https://ipfabric.atlassian.net/browse/NIM-7597) -- Highest -- Lots of Warning: Failed prop type: The prop `timezone` is marked as required
-- [NIM-7599](https://ipfabric.atlassian.net/browse/NIM-7599) -- Highest -- 4.4.0+1 Dropdown in connectivity errors detail is not fully shown
-- [NIM-7602](https://ipfabric.atlassian.net/browse/NIM-7602) -- Medium -- tasks/license - asa & per-context licenses
-- [NIM-7603](https://ipfabric.atlassian.net/browse/NIM-7603) -- Highest -- 4.4.0+1 Transit cloud, edges, and All network in topology graph disappear when intent checks are applied
-- [NIM-7606](https://ipfabric.atlassian.net/browse/NIM-7606) -- High -- Wrong pop-up message on technology/security/access-list
-- [NIM-7612](https://ipfabric.atlassian.net/browse/NIM-7612) -- High -- [4.4.0+1] Invalid bind credentials in LDAP doesn't seem to return any response
-- [NIM-7614](https://ipfabric.atlassian.net/browse/NIM-7614) -- Medium -- Bugfix: commands/hp/_comware/interface
-- [NIM-7615](https://ipfabric.atlassian.net/browse/NIM-7615) -- Highest -- [4.4.0+1] New tables are not available in table tree menu
-- [NIM-7616](https://ipfabric.atlassian.net/browse/NIM-7616) -- Highest -- The wrong color for Leave button
-- [NIM-7617](https://ipfabric.atlassian.net/browse/NIM-7617) -- Highest -- [4.4.0+1] Table componet - Display settings - Label for Toggles are not clickable
-- [NIM-7618](https://ipfabric.atlassian.net/browse/NIM-7618) -- Highest -- [4.4.0+1] Device Explorer - Missing ACL table for firewall devices
-- [NIM-7619](https://ipfabric.atlassian.net/browse/NIM-7619) -- Medium -- [4.4.0+1] Management - Changes - data are invalid
-- [NIM-7626](https://ipfabric.atlassian.net/browse/NIM-7626) -- Highest -- [4.4.0+1] Read User - has available Device Attrbute table
-- [NIM-7627](https://ipfabric.atlassian.net/browse/NIM-7627) -- Medium -- [4.4.0+1] Read User is able to modify records in device attributes
-- [NIM-7635](https://ipfabric.atlassian.net/browse/NIM-7635) -- Highest -- Juniper MIST - hostname fix - Release/4.4.0
-- [NIM-7637](https://ipfabric.atlassian.net/browse/NIM-7637) -- Highest -- WeWork - tasker fail - cursor not found
-- [NIM-7641](https://ipfabric.atlassian.net/browse/NIM-7641) -- Highest -- Updater unique constrained violated on MIST
-- [NIM-7642](https://ipfabric.atlassian.net/browse/NIM-7642) -- Highest -- Ruckus - same AP client saved twice (unique constraint index fail)
-- [NIM-7645](https://ipfabric.atlassian.net/browse/NIM-7645) -- Highest -- Ruckus vIntL2 exists more than once [4.4.0+2]
-- [NIM-7648](https://ipfabric.atlassian.net/browse/NIM-7648) -- Highest -- 4.4.0+1 SSO doesn't seem to work
-- [NIM-7651](https://ipfabric.atlassian.net/browse/NIM-7651) -- High -- Juniper - remove ACCESS-INTERNAL routes
-- [NIM-7656](https://ipfabric.atlassian.net/browse/NIM-7656) -- Highest -- commands/ruckus/_vsz/apOperationalSummary (or tasks/devInfo/ruckus) - negative uptime
-- [NIM-7713](https://ipfabric.atlassian.net/browse/NIM-7713) -- Highest -- Discovery cache isn't cleared
-- [NIM-7722](https://ipfabric.atlassian.net/browse/NIM-7722) -- Highest -- 4.4.0+3 Maintenance is running while graph is being cached
+- `NIM-5094` -- Medium -- XDP Endpoints show network devices as endpoints
+- `NIM-5466` -- Highest -- Vendor API - correct error msg
+- `NIM-6073` -- Medium -- Missing phones in graphs
+- `NIM-6171` -- Medium -- ArubaCX - add AAA support
+- `NIM-6496` -- Medium -- Bugfix: commands/cisco/acl
+- `NIM-6773` -- High -- Connectivity Report - Rediscovry - Sellect All
+- `NIM-6778` -- High -- technology/routing/path-verifications - Add Path button
+- `NIM-6785` -- Medium -- Juniper Junos - Route Instance Detail private tables filtering
+- `NIM-6843` -- Highest -- Global tables should always be displayed
+- `NIM-6845` -- Low -- Snapshot Management - ADD action vs Vendor API settings
+- `NIM-7009` -- Medium -- Bugfix: commands/cisco/_viptela/v1/arp
+- `NIM-7010` -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/neighbors
+- `NIM-7011` -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/summary
+- `NIM-7012` -- Medium -- Bugfix: commands/cisco/_viptela/v1/hardware/inventory
+- `NIM-7013` -- Medium -- Bugfix: commands/cisco/_viptela/v1/interface
+- `NIM-7014` -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/interface
+- `NIM-7015` -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/neighbor
+- `NIM-7016` -- Medium -- Bugfix: commands/cisco/_viptela/v1/vrrp
+- `NIM-7055` -- Medium -- Bugfix: commands/cisco/_viptela/v1/omp/services
+- `NIM-7135` -- High -- Webhooks - cut off select in modal
+- `NIM-7182` -- High -- Broken buttons in Add Vendor dialog
+- `NIM-7193` -- Medium -- nsx-t api wrong status code 400
+- `NIM-7194` -- High -- Cisco StackWise Virtual
+- `NIM-7239` -- Medium -- vmware NSX-T API no response for get method
+- `NIM-7254` -- Highest -- Migration failed - vPathLookupCheck contains corrupted data
+- `NIM-7281` -- Medium -- Bugfix: commands/mikrotik/_routeros/systemLoggingAction
+- `NIM-7283` -- Medium -- Rebuild version not collected for nx-os
+- `NIM-7313` -- Medium -- Device Attributes - Column "Value" not filterable
+- `NIM-7316` -- Medium -- Cloned Locked Snapshot shows Locked in Unloaded state
+- `NIM-7352` -- Medium -- Incorrect algorithms in API graph response
+- `NIM-7363` -- Medium -- HP Aruba CX igmp querry interval - fix
+- `NIM-7365` -- Medium -- Missing apiVersion in Ruckus VSZ POST schema
+- `NIM-7373` -- Medium -- Snapshot that failed to load can't be loaded again
+- `NIM-7387` -- Medium -- Frontend is stuck when snapshot load fails
+- `NIM-7394` -- High -- tasks/l2Interfaces/extreme - missing interfaces
+- `NIM-7398` -- Medium -- PaloAlto in globalVsys aad IPSec task
+- `NIM-7406` -- Medium -- The locked snapshot can be modified
+- `NIM-7417` -- Medium -- [API refactoring] SnapshotloadJob fail
+- `NIM-7422` -- High -- No FW rules for Checkpoint devices
+- `NIM-7426` -- Medium -- [API refactoring] CleanDBJob fail
+- `NIM-7429` -- Medium -- Bad hostname detection on Brocade switch
+- `NIM-7432` -- High -- Multicast source table - link to pathlookup is broken
+- `NIM-7434` -- Medium -- Bugfix: commands/versa/_vos/vnms/dashboard/appliance/vrrp
+- `NIM-7435` -- Medium -- Bugfix: commands/arista/_eos/vxlan/interfaceVxlan
+- `NIM-7439` -- Highest -- Graph - Can't open any site
+- `NIM-7440` -- Medium -- Weird error during maintenance
+- `NIM-7441` -- Medium -- Cannot load previous snapshot
+- `NIM-7445` -- High -- Cisco PID is parsed incorrectly (regular expression doesn't match +)
+- `NIM-7447` -- High -- Failures When Caching Graph Nodes in Snapshotload Job
+- `NIM-7449` -- High -- NSX-t wrong mapping of edgeCluster members
+- `NIM-7453` -- High -- Hosts table is not showing for a specific ios-xe devices
+- `NIM-7461` -- Medium -- Dev02 Update Unloads All Snapshots
+- `NIM-7465` -- High -- Graph Intent Checks - doens't work after TSSTRICT refactor
+- `NIM-7470` -- High -- L3 gateway table still not correct
+- `NIM-7474` -- Medium -- AQL: lock timeout (while loading collections)
+- `NIM-7479` -- High -- Continuous Azure discovery
+- `NIM-7486` -- Highest -- Cloned snapshot does not retain site separation from original
+- `NIM-7492` -- Medium -- Delete device from snapshot is super slow
+- `NIM-7504` -- High -- Invalid credentials fail on unexpected failure
+- `NIM-7505` -- Highest -- Meraki discovery stuck (APIv1)
+- `NIM-7512` -- Highest -- Starting snapshot doesn't start and moves user to SSH/Telnet tab without telling why
+- `NIM-7513` -- High -- Site Separation - Migration issue from v4.2 to v4.3.x - CGI
+- `NIM-7518` -- High -- "Unexpected null or undefined" when radial view on a topology with 1+ node out of tree
+- `NIM-7523` -- Highest -- Error while transforming an array chunk in a stream: SyntaxError: Unexpected end of JSON input
+- `NIM-7531` -- Highest -- Missing labels in Meraki vendor form
+- `NIM-7539` -- High -- Tasker finish routing protocols dstIntName missing (Pathlookup multicast forwarding)
+- `NIM-7550` -- High -- xDP connections to the same device are pointed to the transit
+- `NIM-7556` -- Medium -- Bugfix: commands/paloalto/showConfigPushedSharedPolicyVsys
+- `NIM-7557` -- Medium -- Bugfix: commands/versa/_vos/vnms/dashboard/appliance/sdWanSites
+- `NIM-7558` -- Medium -- Bugfix: commands/mikrotik/_routeros/ipRoute
+- `NIM-7559` -- Medium -- Bugfix: commands/cisco/routingTable
+- `NIM-7561` -- Highest -- xDP connections between HP Aruba AP & HP Arubasw are pointed to the transit
+- `NIM-7566` -- Highest -- Ruckus API with invalid URL says that apiVersion is wrong
+- `NIM-7570` -- Highest -- Ruckus is not in the list of API vendors
+- `NIM-7572` -- High -- [4.4.0+1] unspecified command for API vendors
+- `NIM-7574` -- High -- Cisco APIC is available in Vendor API settings
+- `NIM-7575` -- High -- API Jobs unspecified command
+- `NIM-7579` -- High -- Broken BFS layouting
+- `NIM-7582` -- High -- Broken BFS layouting - release/4.4.0
+- `NIM-7583` -- Highest -- [4.4.0+1] Delete user button is white with white text
+- `NIM-7584` -- High -- CLONE - unspecified command for API vendors
+- `NIM-7586` -- Highest -- [4.4.0+1] Missing delete icon
+- `NIM-7588` -- Highest -- [4.4.0+1] Empty host detail in pathlookup
+- `NIM-7594` -- Highest -- [v4.4.0+1] - Mangement/Changes -> empty table when comparing snapshot
+- `NIM-7597` -- Highest -- Lots of Warning: Failed prop type: The prop `timezone` is marked as required
+- `NIM-7599` -- Highest -- 4.4.0+1 Dropdown in connectivity errors detail is not fully shown
+- `NIM-7602` -- Medium -- tasks/license - asa & per-context licenses
+- `NIM-7603` -- Highest -- 4.4.0+1 Transit cloud, edges, and All network in topology graph disappear when intent checks are applied
+- `NIM-7606` -- High -- Wrong pop-up message on technology/security/access-list
+- `NIM-7612` -- High -- [4.4.0+1] Invalid bind credentials in LDAP doesn't seem to return any response
+- `NIM-7614` -- Medium -- Bugfix: commands/hp/_comware/interface
+- `NIM-7615` -- Highest -- [4.4.0+1] New tables are not available in table tree menu
+- `NIM-7616` -- Highest -- The wrong color for Leave button
+- `NIM-7617` -- Highest -- [4.4.0+1] Table componet - Display settings - Label for Toggles are not clickable
+- `NIM-7618` -- Highest -- [4.4.0+1] Device Explorer - Missing ACL table for firewall devices
+- `NIM-7619` -- Medium -- [4.4.0+1] Management - Changes - data are invalid
+- `NIM-7626` -- Highest -- [4.4.0+1] Read User - has available Device Attrbute table
+- `NIM-7627` -- Medium -- [4.4.0+1] Read User is able to modify records in device attributes
+- `NIM-7635` -- Highest -- Juniper MIST - hostname fix - Release/4.4.0
+- `NIM-7637` -- Highest -- WeWork - tasker fail - cursor not found
+- `NIM-7641` -- Highest -- Updater unique constrained violated on MIST
+- `NIM-7642` -- Highest -- Ruckus - same AP client saved twice (unique constraint index fail)
+- `NIM-7645` -- Highest -- Ruckus vIntL2 exists more than once [4.4.0+2]
+- `NIM-7648` -- Highest -- 4.4.0+1 SSO doesn't seem to work
+- `NIM-7651` -- High -- Juniper - remove ACCESS-INTERNAL routes
+- `NIM-7656` -- Highest -- commands/ruckus/_vsz/apOperationalSummary (or tasks/devInfo/ruckus) - negative uptime
+- `NIM-7713` -- Highest -- Discovery cache isn't cleared
+- `NIM-7722` -- Highest -- 4.4.0+3 Maintenance is running while graph is being cached
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-2989](https://ipfabric.atlassian.net/browse/NIM-2989) -- High -- Improve Support MATRIX portal
-- [NIM-4597](https://ipfabric.atlassian.net/browse/NIM-4597) -- Medium -- Extreme feature request for Extreme
-- [NIM-4713](https://ipfabric.atlassian.net/browse/NIM-4713) -- High -- Cisco - Licensing
-- [NIM-5459](https://ipfabric.atlassian.net/browse/NIM-5459) -- Low -- Support for LDAP StartTLS
-- [NIM-5543](https://ipfabric.atlassian.net/browse/NIM-5543) -- High -- Add new table - Technology / Security / ACL / Global ACL policies
-- [NIM-5894](https://ipfabric.atlassian.net/browse/NIM-5894) -- Medium -- List portchannel interfaces without any members in the portchannels member status table
-- [NIM-6520](https://ipfabric.atlassian.net/browse/NIM-6520) -- High -- HP Aruba CX vxlan
-- [NIM-6573](https://ipfabric.atlassian.net/browse/NIM-6573) -- Medium -- HP Aruba CX SNMP
-- [NIM-6585](https://ipfabric.atlassian.net/browse/NIM-6585) -- High -- Juniper MIST - Discovery
-- [NIM-6806](https://ipfabric.atlassian.net/browse/NIM-6806) -- High -- Ruckus Virtual Smartzone - Discovery
-- [NIM-6834](https://ipfabric.atlassian.net/browse/NIM-6834) -- Medium -- AWS - virtualMachines
-- [NIM-6870](https://ipfabric.atlassian.net/browse/NIM-6870) -- High -- Design dropdown menu positioning
-- [NIM-6930](https://ipfabric.atlassian.net/browse/NIM-6930) -- Medium -- Pathlookup packet tracking - Remember selected edge
-- [NIM-6962](https://ipfabric.atlassian.net/browse/NIM-6962) -- Highest -- Virtual Machines table (AWS, Azure, NSX-T)
-- [NIM-6990](https://ipfabric.atlassian.net/browse/NIM-6990) -- Medium -- Discovery of Palo Alto - device "discovered" but not added into inventory (target-vsys / multi-vsys) - Platform 7000
-- [NIM-7064](https://ipfabric.atlassian.net/browse/NIM-7064) -- High -- Ruckus Virtual SmartZone - API Client
-- [NIM-7068](https://ipfabric.atlassian.net/browse/NIM-7068) -- Highest -- Prepare arangodb example to show collection/doc locking issues
-- [NIM-7074](https://ipfabric.atlassian.net/browse/NIM-7074) -- Medium -- Remove parsing of multicast table (inet.1) from commands/juniper/_junos/route
-- [NIM-7079](https://ipfabric.atlassian.net/browse/NIM-7079) -- High -- Counters - Input errors details
-- [NIM-7100](https://ipfabric.atlassian.net/browse/NIM-7100) -- Medium -- Cisco _asa folder
-- [NIM-7101](https://ipfabric.atlassian.net/browse/NIM-7101) -- Medium -- Cisco _ftd folder
-- [NIM-7102](https://ipfabric.atlassian.net/browse/NIM-7102) -- Medium -- Cisco _nxos folder
-- [NIM-7103](https://ipfabric.atlassian.net/browse/NIM-7103) -- Medium -- Cisco _sg folder
-- [NIM-7107](https://ipfabric.atlassian.net/browse/NIM-7107) -- Medium -- AWS - interfaces name / description
-- [NIM-7130](https://ipfabric.atlassian.net/browse/NIM-7130) -- Highest -- API Vendors licensing - Cloud, SDWAN, Cloud Wireless
-- [NIM-7137](https://ipfabric.atlassian.net/browse/NIM-7137) -- Medium -- Cisco _viptela folder
-- [NIM-7138](https://ipfabric.atlassian.net/browse/NIM-7138) -- Medium -- Cisco _wlcair folder
-- [NIM-7139](https://ipfabric.atlassian.net/browse/NIM-7139) -- Medium -- Cisco _wlcIosxe folder
-- [NIM-7162](https://ipfabric.atlassian.net/browse/NIM-7162) -- Medium -- Create manuals for adding a new vendor (API/CLI)
-- [NIM-7198](https://ipfabric.atlassian.net/browse/NIM-7198) -- Medium -- Remove sampled property from security schema actionBase
-- [NIM-7217](https://ipfabric.atlassian.net/browse/NIM-7217) -- High -- [API refactor] allow dependency injection
-- [NIM-7219](https://ipfabric.atlassian.net/browse/NIM-7219) -- High -- [API refactor] update logging code
-- [NIM-7221](https://ipfabric.atlassian.net/browse/NIM-7221) -- Medium -- [API refactor] update ArangoDB code
-- [NIM-7230](https://ipfabric.atlassian.net/browse/NIM-7230) -- High -- Interface error counters - new table columns
-- [NIM-7232](https://ipfabric.atlassian.net/browse/NIM-7232) -- High -- Security - Discontinuous subnet masks (IPv4)
-- [NIM-7240](https://ipfabric.atlassian.net/browse/NIM-7240) -- Medium -- Remove MongoDB from the product
-- [NIM-7247](https://ipfabric.atlassian.net/browse/NIM-7247) -- High -- Create juniper mist API client
-- [NIM-7252](https://ipfabric.atlassian.net/browse/NIM-7252) -- High -- UI support for LDAP StartTLS
-- [NIM-7301](https://ipfabric.atlassian.net/browse/NIM-7301) -- High -- Cisco Catalyst 9300/9200 switches - power supply and fans
-- [NIM-7302](https://ipfabric.atlassian.net/browse/NIM-7302) -- High -- Cisco Catalyst 9600 switches - power supply and fans
-- [NIM-7318](https://ipfabric.atlassian.net/browse/NIM-7318) -- High -- Full version of Font Awesome
-- [NIM-7322](https://ipfabric.atlassian.net/browse/NIM-7322) -- High -- Enable Meraki v1 in UI
-- [NIM-7334](https://ipfabric.atlassian.net/browse/NIM-7334) -- High -- [4.4.0+1] Add Cisco APIC vendor API support to UI
-- [NIM-7343](https://ipfabric.atlassian.net/browse/NIM-7343) -- High -- virtualMachines - network interface id
-- [NIM-7345](https://ipfabric.atlassian.net/browse/NIM-7345) -- High -- Security model - implement new fields added to interface selector
-- [NIM-7353](https://ipfabric.atlassian.net/browse/NIM-7353) -- High -- Ruckus VSZ vendor API client support for POST requests & pagination
-- [NIM-7355](https://ipfabric.atlassian.net/browse/NIM-7355) -- High -- Add Ruckus Virtual SmartZone vendor API support to UI
-- [NIM-7381](https://ipfabric.atlassian.net/browse/NIM-7381) -- High -- License task - new tables
-- [NIM-7390](https://ipfabric.atlassian.net/browse/NIM-7390) -- Medium -- Improve logs when deleting a snapshot
-- [NIM-7391](https://ipfabric.atlassian.net/browse/NIM-7391) -- Medium -- Refactor AQL - use eIntL2IntL3
-- [NIM-7401](https://ipfabric.atlassian.net/browse/NIM-7401) -- Medium -- [API] Fix management changes endpoint to use snapshot shortcuts
-- [NIM-7403](https://ipfabric.atlassian.net/browse/NIM-7403) -- Medium -- Implement support for discontinuous masks in API
-- [NIM-7404](https://ipfabric.atlassian.net/browse/NIM-7404) -- Medium -- [API refactor] disable TS implicit any in API repo
-- [NIM-7409](https://ipfabric.atlassian.net/browse/NIM-7409) -- High -- Add Juniper Mist vendor API support to UI
-- [NIM-7421](https://ipfabric.atlassian.net/browse/NIM-7421) -- High -- Improve task documentation
-- [NIM-7446](https://ipfabric.atlassian.net/browse/NIM-7446) -- Medium -- commands/cisco/showInventory & devInfo results vs. End of Life information
-- [NIM-7456](https://ipfabric.atlassian.net/browse/NIM-7456) -- Medium -- Inventory / Sites / Manual Separation - add autocomplete for site name
-- [NIM-7460](https://ipfabric.atlassian.net/browse/NIM-7460) -- Medium -- Merge multiple API config files
-- [NIM-7462](https://ipfabric.atlassian.net/browse/NIM-7462) -- High -- UI Change - Management IP to Login IP
-- [NIM-7515](https://ipfabric.atlassian.net/browse/NIM-7515) -- Highest -- Generate fresh list of tables
-- [NIM-7534](https://ipfabric.atlassian.net/browse/NIM-7534) -- High -- tasks/sn - use slash to separate sn from the logical device name
-- [NIM-7536](https://ipfabric.atlassian.net/browse/NIM-7536) -- Medium -- Stop using winston directly
-- [NIM-7548](https://ipfabric.atlassian.net/browse/NIM-7548) -- Medium -- Vendor API clients stability tweaks
-- [NIM-7563](https://ipfabric.atlassian.net/browse/NIM-7563) -- Highest -- Rename junipermist to juniper-mist
-- [NIM-7673](https://ipfabric.atlassian.net/browse/NIM-7673) -- Medium -- Ruckus device discovery - filter out pre-prevision devices that are not connected
-- [NIM-7674](https://ipfabric.atlassian.net/browse/NIM-7674) -- Highest -- Ensure devType is always set for wireless AP
-- [DOS-152](https://ipfabric.atlassian.net/browse/DOS-152) -- Medium -- Provide basic syslog configuration for a new target
-- [DOS-302](https://ipfabric.atlassian.net/browse/DOS-302) -- Medium -- Fix AWS permissions for new LABs
-- [DOS-319](https://ipfabric.atlassian.net/browse/DOS-319) -- Highest -- Update of API breaks manual SSO configuration
+- `NIM-2989` -- High -- Improve Support MATRIX portal
+- `NIM-4597` -- Medium -- Extreme feature request for Extreme
+- `NIM-4713` -- High -- Cisco - Licensing
+- `NIM-5459` -- Low -- Support for LDAP StartTLS
+- `NIM-5543` -- High -- Add new table - Technology / Security / ACL / Global ACL policies
+- `NIM-5894` -- Medium -- List portchannel interfaces without any members in the portchannels member status table
+- `NIM-6520` -- High -- HP Aruba CX vxlan
+- `NIM-6573` -- Medium -- HP Aruba CX SNMP
+- `NIM-6585` -- High -- Juniper MIST - Discovery
+- `NIM-6806` -- High -- Ruckus Virtual Smartzone - Discovery
+- `NIM-6834` -- Medium -- AWS - virtualMachines
+- `NIM-6870` -- High -- Design dropdown menu positioning
+- `NIM-6930` -- Medium -- Pathlookup packet tracking - Remember selected edge
+- `NIM-6962` -- Highest -- Virtual Machines table (AWS, Azure, NSX-T)
+- `NIM-6990` -- Medium -- Discovery of Palo Alto - device "discovered" but not added into inventory (target-vsys / multi-vsys) - Platform 7000
+- `NIM-7064` -- High -- Ruckus Virtual SmartZone - API Client
+- `NIM-7068` -- Highest -- Prepare arangodb example to show collection/doc locking issues
+- `NIM-7074` -- Medium -- Remove parsing of multicast table (inet.1) from commands/juniper/_junos/route
+- `NIM-7079` -- High -- Counters - Input errors details
+- `NIM-7100` -- Medium -- Cisco _asa folder
+- `NIM-7101` -- Medium -- Cisco _ftd folder
+- `NIM-7102` -- Medium -- Cisco _nxos folder
+- `NIM-7103` -- Medium -- Cisco _sg folder
+- `NIM-7107` -- Medium -- AWS - interfaces name / description
+- `NIM-7130` -- Highest -- API Vendors licensing - Cloud, SDWAN, Cloud Wireless
+- `NIM-7137` -- Medium -- Cisco _viptela folder
+- `NIM-7138` -- Medium -- Cisco _wlcair folder
+- `NIM-7139` -- Medium -- Cisco _wlcIosxe folder
+- `NIM-7162` -- Medium -- Create manuals for adding a new vendor (API/CLI)
+- `NIM-7198` -- Medium -- Remove sampled property from security schema actionBase
+- `NIM-7217` -- High -- [API refactor] allow dependency injection
+- `NIM-7219` -- High -- [API refactor] update logging code
+- `NIM-7221` -- Medium -- [API refactor] update ArangoDB code
+- `NIM-7230` -- High -- Interface error counters - new table columns
+- `NIM-7232` -- High -- Security - Discontinuous subnet masks (IPv4)
+- `NIM-7240` -- Medium -- Remove MongoDB from the product
+- `NIM-7247` -- High -- Create juniper mist API client
+- `NIM-7252` -- High -- UI support for LDAP StartTLS
+- `NIM-7301` -- High -- Cisco Catalyst 9300/9200 switches - power supply and fans
+- `NIM-7302` -- High -- Cisco Catalyst 9600 switches - power supply and fans
+- `NIM-7318` -- High -- Full version of Font Awesome
+- `NIM-7322` -- High -- Enable Meraki v1 in UI
+- `NIM-7334` -- High -- [4.4.0+1] Add Cisco APIC vendor API support to UI
+- `NIM-7343` -- High -- virtualMachines - network interface id
+- `NIM-7345` -- High -- Security model - implement new fields added to interface selector
+- `NIM-7353` -- High -- Ruckus VSZ vendor API client support for POST requests & pagination
+- `NIM-7355` -- High -- Add Ruckus Virtual SmartZone vendor API support to UI
+- `NIM-7381` -- High -- License task - new tables
+- `NIM-7390` -- Medium -- Improve logs when deleting a snapshot
+- `NIM-7391` -- Medium -- Refactor AQL - use eIntL2IntL3
+- `NIM-7401` -- Medium -- [API] Fix management changes endpoint to use snapshot shortcuts
+- `NIM-7403` -- Medium -- Implement support for discontinuous masks in API
+- `NIM-7404` -- Medium -- [API refactor] disable TS implicit any in API repo
+- `NIM-7409` -- High -- Add Juniper Mist vendor API support to UI
+- `NIM-7421` -- High -- Improve task documentation
+- `NIM-7446` -- Medium -- commands/cisco/showInventory & devInfo results vs. End of Life information
+- `NIM-7456` -- Medium -- Inventory / Sites / Manual Separation - add autocomplete for site name
+- `NIM-7460` -- Medium -- Merge multiple API config files
+- `NIM-7462` -- High -- UI Change - Management IP to Login IP
+- `NIM-7515` -- Highest -- Generate fresh list of tables
+- `NIM-7534` -- High -- tasks/sn - use slash to separate sn from the logical device name
+- `NIM-7536` -- Medium -- Stop using winston directly
+- `NIM-7548` -- Medium -- Vendor API clients stability tweaks
+- `NIM-7563` -- Highest -- Rename junipermist to juniper-mist
+- `NIM-7673` -- Medium -- Ruckus device discovery - filter out pre-prevision devices that are not connected
+- `NIM-7674` -- Highest -- Ensure devType is always set for wireless AP
+- `DOS-152` -- Medium -- Provide basic syslog configuration for a new target
+- `DOS-302` -- Medium -- Fix AWS permissions for new LABs
+- `DOS-319` -- Highest -- Update of API breaks manual SSO configuration
 
 ## Sub-Tasks
 
 Sub-tasks are very well contained work packages, organized under Tasks.
 
-- [NIM-6391](https://ipfabric.atlassian.net/browse/NIM-6391) -- Medium -- Extreme XOS/EXOS AAA support
-- [NIM-6654](https://ipfabric.atlassian.net/browse/NIM-6654) -- Medium -- Prototype IP/CIDR component endpoints
-- [NIM-6779](https://ipfabric.atlassian.net/browse/NIM-6779) -- High -- Cisco APIC API client
-- [NIM-7027](https://ipfabric.atlassian.net/browse/NIM-7027) -- Medium -- Cisco FMC - use cache
-- [NIM-7086](https://ipfabric.atlassian.net/browse/NIM-7086) -- Medium -- Site Separation - change drang & drop effect in the table
-- [NIM-7199](https://ipfabric.atlassian.net/browse/NIM-7199) -- High -- Show (global) tables in the frontend when no snapshot is loaded
-- [NIM-7206](https://ipfabric.atlassian.net/browse/NIM-7206) -- Medium -- Add endpoint for new table of ACLs applied globally
-- [NIM-7210](https://ipfabric.atlassian.net/browse/NIM-7210) -- High -- Security model - add mac and vxlan selectors
-- [NIM-7292](https://ipfabric.atlassian.net/browse/NIM-7292) -- High -- Improve Vendor API error messages in UI
-- [NIM-7305](https://ipfabric.atlassian.net/browse/NIM-7305) -- High -- Security model: new header selectors – eth, vxlan
-- [NIM-7330](https://ipfabric.atlassian.net/browse/NIM-7330) -- Medium -- Security model: intra/interGrp selectors implementation
-- [NIM-7400](https://ipfabric.atlassian.net/browse/NIM-7400) -- Medium -- tasks/acl - Cisco discontinuous masks support
-- [NIM-7405](https://ipfabric.atlassian.net/browse/NIM-7405) -- High -- Add insensitive equal filter support into frontend
-- [NIM-7489](https://ipfabric.atlassian.net/browse/NIM-7489) -- Highest -- Virtual Machines Tables - webng part
-- [NIM-7501](https://ipfabric.atlassian.net/browse/NIM-7501) -- Highest -- Interface counters tables - webng part
-- [NIM-7514](https://ipfabric.atlassian.net/browse/NIM-7514) -- Highest -- New tables for Licenses - webng part
+- `NIM-6391` -- Medium -- Extreme XOS/EXOS AAA support
+- `NIM-6654` -- Medium -- Prototype IP/CIDR component endpoints
+- `NIM-6779` -- High -- Cisco APIC API client
+- `NIM-7027` -- Medium -- Cisco FMC - use cache
+- `NIM-7086` -- Medium -- Site Separation - change drang & drop effect in the table
+- `NIM-7199` -- High -- Show (global) tables in the frontend when no snapshot is loaded
+- `NIM-7206` -- Medium -- Add endpoint for new table of ACLs applied globally
+- `NIM-7210` -- High -- Security model - add mac and vxlan selectors
+- `NIM-7292` -- High -- Improve Vendor API error messages in UI
+- `NIM-7305` -- High -- Security model: new header selectors – eth, vxlan
+- `NIM-7330` -- Medium -- Security model: intra/interGrp selectors implementation
+- `NIM-7400` -- Medium -- tasks/acl - Cisco discontinuous masks support
+- `NIM-7405` -- High -- Add insensitive equal filter support into frontend
+- `NIM-7489` -- Highest -- Virtual Machines Tables - webng part
+- `NIM-7501` -- Highest -- Interface counters tables - webng part
+- `NIM-7514` -- Highest -- New tables for Licenses - webng part
