--- a/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.2.md
+++ b/docs/releases/release_notes_low-level/5.x/5.0.x/5.0.2.md
@@ -6,17 +6,17 @@ These are low-level release notes for IP Fabric release `5.0.2`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-7877](https://ipfabric.atlassian.net/browse/NIM-7877) -- High -- Intent Calculation failed for complex ZoneFW policies - ArangoDB cursor not found in reports
-- [NIM-8844](https://ipfabric.atlassian.net/browse/NIM-8844) -- Medium -- Downloading Configuration File "Unexpected Failure" - [ERR_CHILD_PROCESS_STDIO_MAXBUFFER]: stdout maxBuffer length exceeded
-- [NIM-8858](https://ipfabric.atlassian.net/browse/NIM-8858) -- Highest -- Resources consumption of Versa director (Versa API rate limiting)
-- [NIM-8907](https://ipfabric.atlassian.net/browse/NIM-8907) -- Medium -- Jumphost username restriction
-- [NIM-8988](https://ipfabric.atlassian.net/browse/NIM-8988) -- High -- Juniper Device info task failure
-- [DOS-721](https://ipfabric.atlassian.net/browse/DOS-721) -- Medium -- broken nimpeeMigrate while server using ipv6
-- [DOS-754](https://ipfabric.atlassian.net/browse/DOS-754) -- Medium -- ipf-webng-userflow is picked by aptitude during 5.0.2 installation
+- `NIM-7877` -- High -- Intent Calculation failed for complex ZoneFW policies - ArangoDB cursor not found in reports
+- `NIM-8844` -- Medium -- Downloading Configuration File "Unexpected Failure" - [ERR_CHILD_PROCESS_STDIO_MAXBUFFER]: stdout maxBuffer length exceeded
+- `NIM-8858` -- Highest -- Resources consumption of Versa director (Versa API rate limiting)
+- `NIM-8907` -- Medium -- Jumphost username restriction
+- `NIM-8988` -- High -- Juniper Device info task failure
+- `DOS-721` -- Medium -- broken nimpeeMigrate while server using ipv6
+- `DOS-754` -- Medium -- ipf-webng-userflow is picked by aptitude during 5.0.2 installation
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-8912](https://ipfabric.atlassian.net/browse/NIM-8912) -- High -- FabricPath - Add feature-set support for cisco nexus.
-- [DOS-744](https://ipfabric.atlassian.net/browse/DOS-744) -- Medium -- nimpee-2.0: boot hang due to UFW issue
+- `NIM-8912` -- High -- FabricPath - Add feature-set support for cisco nexus.
+- `DOS-744` -- Medium -- nimpee-2.0: boot hang due to UFW issue
