--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.1.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.1.md
@@ -6,41 +6,41 @@ These are low-level release notes for IP Fabric release `6.0.1`. Please note, th
 
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
-- [NIM-8653](https://ipfabric.atlassian.net/browse/NIM-8653) -- Medium -- Typo in error message: "Can't get trafic shaper settings"
-- [NIM-8881](https://ipfabric.atlassian.net/browse/NIM-8881) -- Medium -- NSX routing between Tier0 and Tier1 devices
-- [NIM-8882](https://ipfabric.atlassian.net/browse/NIM-8882) -- Medium -- xDP endpoints don't display when you view link details
-- [NIM-9469](https://ipfabric.atlassian.net/browse/NIM-9469) -- Medium -- Cisco ACI - hostname tasks uses wrong dependency
-- [NIM-9581](https://ipfabric.atlassian.net/browse/NIM-9581) -- Medium -- Cisco - Prefix-list not added to the table - 6.0.0
-- [NIM-9585](https://ipfabric.atlassian.net/browse/NIM-9585) -- High -- Brocade version detection issues of 08.0.70
-- [NIM-9592](https://ipfabric.atlassian.net/browse/NIM-9592) -- High -- Inconsistent Graph nodes
-- [NIM-9594](https://ipfabric.atlassian.net/browse/NIM-9594) -- Medium -- F5 IP addresses have not correct VRF
-- [NIM-9599](https://ipfabric.atlassian.net/browse/NIM-9599) -- High -- Discovery 6.0.0 logs issues
-- [NIM-9604](https://ipfabric.atlassian.net/browse/NIM-9604) -- Highest -- loadGraphCache stuck in a loop
-- [NIM-9612](https://ipfabric.atlassian.net/browse/NIM-9612) -- High -- Not all credentials are tried
-- [NIM-9613](https://ipfabric.atlassian.net/browse/NIM-9613) -- Medium -- Bugfix: commands/vmware/_nsx-t/nsServices (6.0.0-24)
-- [NIM-9617](https://ipfabric.atlassian.net/browse/NIM-9617) -- Medium -- Cisco IOS static MAC address are not parsing
-- [NIM-9618](https://ipfabric.atlassian.net/browse/NIM-9618) -- Medium -- MPLS E2E Pathlookup broken
-- [NIM-9623](https://ipfabric.atlassian.net/browse/NIM-9623) -- Medium -- Worker dies when doing E2E path lookup
-- [NIM-9625](https://ipfabric.atlassian.net/browse/NIM-9625) -- Medium -- Unable to detect HP Aruba OS
-- [NIM-9628](https://ipfabric.atlassian.net/browse/NIM-9628) -- High -- E2E Path look ups displaying id=null
-- [NIM-9690](https://ipfabric.atlassian.net/browse/NIM-9690) -- High -- Users unable to use Path Lookup with assigned Attribute scopes (hosts nodes in the result)
-- [NIM-9706](https://ipfabric.atlassian.net/browse/NIM-9706) -- Highest -- API scopes policy - can't save all api scope
-- [NIM-9780](https://ipfabric.atlassian.net/browse/NIM-9780) -- Medium -- Snapshot calculations failing on `Storing 862169 syntax search data records in db`
-- [NIM-9791](https://ipfabric.atlassian.net/browse/NIM-9791) -- High -- Shaper settings unavailable
-- [NIM-9877](https://ipfabric.atlassian.net/browse/NIM-9877) -- Medium -- Error: Job stopped (too many resumes)
-- [DOS-860](https://ipfabric.atlassian.net/browse/DOS-860) -- Medium -- License upload does not update customer name in sys-nimpee.conf
-- [DOS-893](https://ipfabric.atlassian.net/browse/DOS-893) -- High -- Appliance should have locked password for user root, not password-less root
+- `NIM-8653` -- Medium -- Typo in error message: "Can't get trafic shaper settings"
+- `NIM-8881` -- Medium -- NSX routing between Tier0 and Tier1 devices
+- `NIM-8882` -- Medium -- xDP endpoints don't display when you view link details
+- `NIM-9469` -- Medium -- Cisco ACI - hostname tasks uses wrong dependency
+- `NIM-9581` -- Medium -- Cisco - Prefix-list not added to the table - 6.0.0
+- `NIM-9585` -- High -- Brocade version detection issues of 08.0.70
+- `NIM-9592` -- High -- Inconsistent Graph nodes
+- `NIM-9594` -- Medium -- F5 IP addresses have not correct VRF
+- `NIM-9599` -- High -- Discovery 6.0.0 logs issues
+- `NIM-9604` -- Highest -- loadGraphCache stuck in a loop
+- `NIM-9612` -- High -- Not all credentials are tried
+- `NIM-9613` -- Medium -- Bugfix: commands/vmware/_nsx-t/nsServices (6.0.0-24)
+- `NIM-9617` -- Medium -- Cisco IOS static MAC address are not parsing
+- `NIM-9618` -- Medium -- MPLS E2E Pathlookup broken
+- `NIM-9623` -- Medium -- Worker dies when doing E2E path lookup
+- `NIM-9625` -- Medium -- Unable to detect HP Aruba OS
+- `NIM-9628` -- High -- E2E Path look ups displaying id=null
+- `NIM-9690` -- High -- Users unable to use Path Lookup with assigned Attribute scopes (hosts nodes in the result)
+- `NIM-9706` -- Highest -- API scopes policy - can't save all api scope
+- `NIM-9780` -- Medium -- Snapshot calculations failing on `Storing 862169 syntax search data records in db`
+- `NIM-9791` -- High -- Shaper settings unavailable
+- `NIM-9877` -- Medium -- Error: Job stopped (too many resumes)
+- `DOS-860` -- Medium -- License upload does not update customer name in sys-nimpee.conf
+- `DOS-893` -- High -- Appliance should have locked password for user root, not password-less root
 
 ## Tasks
 
 Task may be associated into Epics or Stories to form complex features.
 
-- [NIM-8856](https://ipfabric.atlassian.net/browse/NIM-8856) -- Medium -- Add uid field to device policy API response
-- [NIM-9627](https://ipfabric.atlassian.net/browse/NIM-9627) -- High -- Backport Cisco APIC client to detect and act on 400/dataset is too big to 6.0.x
+- `NIM-8856` -- Medium -- Add uid field to device policy API response
+- `NIM-9627` -- High -- Backport Cisco APIC client to detect and act on 400/dataset is too big to 6.0.x
 
 ## Sub-Tasks
 
 Sub-tasks are very well contained work packages, organized under Tasks.
 
-- [NIM-9583](https://ipfabric.atlassian.net/browse/NIM-9583) -- Medium -- Cisco PBR - not found referenced ACL + typo in emitted message
-- [NIM-9738](https://ipfabric.atlassian.net/browse/NIM-9738) -- Medium -- Cisco APIC - SSH/API matching improvement
+- `NIM-9583` -- Medium -- Cisco PBR - not found referenced ACL + typo in emitted message
+- `NIM-9738` -- Medium -- Cisco APIC - SSH/API matching improvement
