NIM-10527 Add notice about SSO requiring change to ipf-dex.yaml

--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -15,6 +15,11 @@ MD5(ipfabric-update-6_1_0+12.tar.gz.sig) = 593a4b885d12dfb88bca31b57e4c2165
 
 For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.1.0](../release_notes_low-level/6.x/6.1.x/6.1.0.md).
 
+### Upgrade Notices
+
+- Upgrade to `v6.1` will break custom SSO integrations and will require a change to the `/etc/ipf-dex.yaml` file. Simply replace the `v6.0` in this file with `v6.1` and then run `systemctl restart ipf-dex`. If you would like assistance please contact your Solution Architect.
+- Forcepoint -- More features supported, mainly added support for SMC API (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+
 ### Noticeable changes
 
 - Removed the End User Licensing agreement (EULA) acceptance step on a user's first log-in. A user approves EULA on loading a license.
@@ -73,7 +78,3 @@ For the list of delivered tickets, please consult the [Low-Level Release Notes f
 - Ruckus -- Added EoL information.
 - Silver Peak -- Added support for two new login types (RADIUS and TACACS+).
 - Versa -- Added support for end-to-end path tracing with Versa SD-WAN.
-
-### Upgrade Notices
-
-- Forcepoint -- More features supported, mainly added support for SMC API (see our [feature matrix](https://matrix.ipfabric.io) for more details).
