--- a/docs/releases/release_notes/6.1.md
+++ b/docs/releases/release_notes/6.1.md
@@ -2,6 +2,25 @@
 
 --8<-- "snippets/clear_browser_cache.md"
 
+## v6.1.1 (March 9th, 2023)
+
+```shell
+SHA256 (ipfabric-6-1-1+0.qcow2) = adec5400c7c44adb05cca7b5efff603cc05e0520f1c1e48b7459c6a66d10a6d9
+MD5 (ipfabric-6-1-1+0.qcow2) = 4ff2faac23a805d5eb78003c0747a6e0
+SHA256 (ipfabric-6-1-1+0.ova) = db3b8bea71bf9055fc709be4ca4fc0a9cd612e21bcf1505ae3a4f07125774684
+MD5 (ipfabric-6-1-1+0.ova) = ba97b2e11638316880954551df1ed85b
+SHA256 (ipfabric-update-6_1_1+0.tar.gz.sig) = 6ff25b1afd03d9776a910b5fb4f9985aca521dbad613764c6d591cecce0cb629
+MD5(ipfabric-update-6_1_1+0.tar.gz.sig) = 60a744a3859812d34ccb107ed0e6ee6a
+```
+
+For the list of delivered tickets, please consult the [Low-Level Release Notes for 6.1.1](../release_notes_low-level/6.x/6.1.x/6.1.1.md).
+
+### Bug Fixes
+
+- Issue of switching into FortiGate VDOM fixed
+- Speed of Checkpoint discovery optimized -- parallel load of API data enabled and duplicate requests eliminated
+- Cisco `show flow monitor` command parsing refactored to prevent an issue of a too high regular expression backtracking
+
 ## v6.1.0 (February 21st, 2023)
 
 ```shell
