--- a/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.1.x/6.1.0.md
@@ -38,7 +38,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7644` -- Medium -- Submitting LDAP form cannot leave page
 - `NIM-8087` -- Medium -- Cisco cutting XDP neighbor if long hostname is present
 - `NIM-8354` -- High -- Pathlookup - Incorrectly evaluated L3 regression on Comware
-- `NIM-8453` -- High -- Remove section policies & remarks from security policy table for Check Point
+- `NIM-8453` -- High -- CheckPoint - Remove section policies & remarks from security policy table
 - `NIM-8512` -- High -- Same PN for different vendors gets EoL colored
 - `NIM-8650` -- Medium -- AWS - VPC Endpoints
 - `NIM-8698` -- Medium -- Cisco Viptela - missing seconday IP
@@ -305,7 +305,6 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-10341` -- Medium -- Bugfix: commands/juniper/_mist/v1/organizations/stats/devices (6.0.0-24)
 - `NIM-10346` -- Medium -- Bugfix: commands/cisco/monitor/sessionAll (6.0.0-24)
 - `NIM-10368` -- Highest -- Node collapse doesn't work
-- `NIM-10383` -- Medium -- Bugfix: commands/cisco/mac (6.0.0-24)
 - `DOS-841` -- Medium -- nimpee-api service on jupee.ipf.cx is not starting
 - `DOS-844` -- Medium -- Jumphost public key is missing
 - `DOS-847` -- Medium -- Update nimpee-net-config help
@@ -316,6 +315,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `DOS-912` -- Medium -- Fix 6.1 branches
 - `DOS-918` -- Highest -- Upgrade package to version 6.1.0+3 fails with different settings
 - `DOS-935` -- Low -- Shaper Bandwidth limit resets to 3Mbit after reboot - no impact, just confusing
+- `DOS-1001` -- Medium -- New release in license server can't be saved
 
 ## Tasks
 
@@ -334,7 +334,7 @@ Task may be associated into Epics or Stories to form complex features.
 - `NIM-8233` -- Medium -- Implement Intent Rules management for new Table
 - `NIM-8274` -- Medium -- Update webng to Webpack 5
 - `NIM-8409` -- Medium -- Proccessing optimalization of multi-context devices
-- `NIM-8455` -- High -- Disabled policies appear with enabled policies
+- `NIM-8455` -- High -- CheckPoint - Disabled policies appear with enabled policies
 - `NIM-8561` -- High -- Pathlookup support for NAT & PBR
 - `NIM-8563` -- Medium -- Cisco FabricPath pathlookup
 - `NIM-8596` -- Medium -- Vendor API client tests: Azure
