NIM-10619 - Updates 6.2 release notes with FS

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -16,6 +16,8 @@ tags: ["draft"]
 
 ### Network Discovery
 
+- FS -- Added limited support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
+
 ### Upgrade Notices
 
 - Forcepoint -- NAT support was added (see our [feature matrix](https://matrix.ipfabric.io) for more details).
