NIM-10376 Preventing unlimited restarts of Discovery services restarts

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -13,6 +13,7 @@ tags: ["draft"]
 ## v6.2.0 (TBD)
 
 ### Noticeable changes
+- Limiting the number of the Discovery services restarts -- only 1 restart per service is allowed (previously unlimited). Crashed service will impact the IP Fabric ability to finish running discovery or start a new one. Investigation of the cause of the restart is advised.
 
 ### Network Discovery
 
