NIM-10009 docs/releases/release_notes/6.2 - Updates release notes with Alcatel

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -16,8 +16,8 @@ tags: ["draft"]
 
 ### Network Discovery
 
+- Alcatel -- Added support for basic network management (see our [feature matrix](https://matrix.ipfabric.io) for more details) 
+- Forcepoint -- NAT support was added (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - FS -- Added limited support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 
 ### Upgrade Notices
-
-- Forcepoint -- NAT support was added (see our [feature matrix](https://matrix.ipfabric.io) for more details).
