DOS-1022: dex dependency update in release ntoes

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -16,10 +16,14 @@ tags: ["draft"]
 
 ### Network Discovery
 
-- Alcatel -- Added support for basic network management (see our [feature matrix](https://matrix.ipfabric.io) for more details) 
+- Alcatel -- Added support for basic network management (see our [feature matrix](https://matrix.ipfabric.io) for more details)
 - Forcepoint -- NAT support was added (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - FS -- Added limited support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
-- PaloAlto 
+- PaloAlto
     - Panos -- Added support for license (see our [feature matrix](https://matrix.ipfabric.io) for more details).
     - Prisma -- Added support for management tasks (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 ### Upgrade Notices
+
+###  3rd party dependencies
+
+- package `dex` used for SSO was upgraded from version 2.30.2 to latest version 2.36.0, see [release notes](https://github.com/dexidp/dex/releases).
