ST-173 Allow only 'IPsec', 'ipsec' and 'iPsec'; change to 'IPsec' when relevant

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -195,7 +195,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
 - Updated EoL information for F5
 - Router with no VLAN tag on the interface to ACI leaf connection over
   L2 with xDP added.
-- Table Technology / Security / IPSec / IPSec tunnels - add new column
+- Table Technology / Security / IPsec / IPsec tunnels - add new column
   "Tunnel interface description"
 - Table Technology / Addressing / Manage IP - add new columns
   "Interfaces L1 state", "Interfaces L2 state"
