--- a/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.3.x/4.3.0.md
@@ -83,7 +83,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-6146` -- High -- FTP utility checks if FTPS is available
 - `NIM-6214` -- Medium -- discovery snapshot / refresh device - credential settings not displayed correctly due to number of network
 - `NIM-6229` -- High -- Routing to VARP IP
-- `NIM-6244` -- Highest -- Pathlookup - tunnel with ipsec applied
+- `NIM-6244` -- Highest -- Pathlookup - tunnel with IPsec applied
 - `NIM-6299` -- Medium -- APs are discoverd via WLC, but showing as unmanaged neighbours
 - `NIM-6306` -- Medium -- Confusing Security Rules when using Continue
 - `NIM-6322` -- Medium -- EoL dates for Meraki are incorrect in 4.0.2 release and EoL update
@@ -116,7 +116,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-6665` -- High -- DROP: Route for destination IP(s) not found. (192.168.40.36) on path trace
 - `NIM-6667` -- Medium -- Detail for CDP links exposes details of CDP to Transit link
 - `NIM-6674` -- Medium -- Missing IP and MTU for Tunnel interfaces on ASA
-- `NIM-6681` -- Medium -- Use tunnel interface description for IPSec tunnels, not of the source interface
+- `NIM-6681` -- Medium -- Use tunnel interface description for IPsec tunnels, not of the source interface
 - `NIM-6718` -- Medium -- Snapshot Upload vs maximum of loaded snapshots
 - `NIM-6730` -- Medium -- ARP table on Checkpoint devices is not fully collected
 - `NIM-6733` -- High -- MPLS forwarding error - reverse E2E works fine
