--- a/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/release_notes_low-level/4.x/4.4.x/4.4.0.md
@@ -53,7 +53,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-7373` -- Medium -- Snapshot that failed to load can't be loaded again
 - `NIM-7387` -- Medium -- Frontend is stuck when snapshot load fails
 - `NIM-7394` -- High -- tasks/l2Interfaces/extreme - missing interfaces
-- `NIM-7398` -- Medium -- PaloAlto in globalVsys aad IPSec task
+- `NIM-7398` -- Medium -- PaloAlto in globalVsys aad IPsec task
 - `NIM-7406` -- Medium -- The locked snapshot can be modified
 - `NIM-7417` -- Medium -- [API refactoring] SnapshotloadJob fail
 - `NIM-7422` -- High -- No FW rules for Checkpoint devices
