--- a/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
+++ b/docs/releases/release_notes_low-level/6.x/6.0.x/6.0.0.md
@@ -100,7 +100,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-8921` -- Medium -- Center loader when table content is wider than viewport
 - `NIM-8928` -- High -- Error in handling empty ref
 - `NIM-8931` -- Medium -- Table is not visible after page load
-- `NIM-8932` -- Medium -- MIkrotk ipsec policy output
+- `NIM-8932` -- Medium -- Mikrotik ipsec policy output
 - `NIM-8934` -- Medium -- Bugfix: commands/hp/_comware/linkAggregationVerbose (5.0.1+10)
 - `NIM-8935` -- Medium -- Bugfix: commands/cisco/ipv6NeighborVrfAll (5.0.1+10)
 - `NIM-8936` -- Medium -- Bugfix: commands/vmware/_nsx-t/ospfNeighbors - Tesco (5.0.1+10)
