--- a/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
+++ b/docs/releases/release_notes/previous_releases/v3.x.x_ip_fabric.md
@@ -46,7 +46,7 @@ OVA SHA256SUM: D9D71C6BACE7FA8AC9913FDD9B6F2ACBE743AB31218C0357BB7A271D0D1E6DE6
   errors - VSX clusters & checkpoint host objects
 - CheckPoint Gaia - fixed parsing of bandwidth information for command
   `show virtual-system all`
-- Cisco IOS - exclude OSPFv3 "authentication/confidentiality" IPSec
+- Cisco IOS - exclude OSPFv3 "authentication/confidentiality" IPsec
   tunnels.
 - Cisco IOS - fixed parsing for command `show subscriber session all`
 - Cisco IOS - fixed parsing of command `show ip flow export` in case
@@ -143,7 +143,7 @@ OVA SHA256SUM: 4E7FBA8DF01A787D93B8E6D0E3FE8AED68E3C9F6EABB3D162F84E1F99DADDD3D
 - Juniper JunOS - routing table - fixed parsing of MPLS labels
 - F5 BigIP - new cmd `show sys cluster all-properties` to add cluster
   management interfaces to interface list.
-- Palo Alto IPSec - fixed parsing of tunnels with long names and
+- Palo Alto IPsec - fixed parsing of tunnels with long names and
   multiple proposals
 
 ## 3.8.0 (26th April 2021)
@@ -191,9 +191,9 @@ OVA SHA256SUM: 2b208eb7584fd5b4708ea56a7f1688f4bf44624c872ef0d6b792576e88f9ff00
   display an additional page of command output
 - Table Inventory / Interfaces - added columns about Transceivers (if
   exist, SN, PN, Type - 3 of them hidden by default)
-- Table Technology / Security / IPSec / Tunnels - added column
+- Table Technology / Security / IPsec / Tunnels - added column
   "Interface description"
-- Table Technology / Security / IPSec / Gateways - added column
+- Table Technology / Security / IPsec / Gateways - added column
   "Interface description"
 - Table Technology / Platforms / Stacks / Stack Ports - For stack
   technologies that use regular ports for the stack, a new column with
@@ -278,7 +278,7 @@ OVA SHA256SUM: 2b208eb7584fd5b4708ea56a7f1688f4bf44624c872ef0d6b792576e88f9ff00
 - Cisco IOS-XR - fixed parsing of different output for command "show
   mpls forwarding"
 - Cisco IOS, IOS-XE and IOS-XR - Routing table parsing fixed
-- Cisco IOS, IOS-XE, ASA - fixed interface mapping in IPSec task.
+- Cisco IOS, IOS-XE, ASA - fixed interface mapping in IPsec task.
 - Cisco IOS, NX-OS - use the full form of commands to avoid ambiguous
   commands - "show spanning-tree summary", "show spanning-tree
   detail", "show port-channel summary", "show etherchannel-summary"
@@ -745,12 +745,12 @@ SHA256SUM: 8a3805704b6f4b126d960e3953749f936c67e635d94d387d86ddea6ecf4ea8fc
 
 ### Features - Protocol and technology support
 
-- Adds IPSec support for the following platforms
+- Adds IPsec support for the following platforms
   - Cisco IOS, IOS-XE, ASA
   - Juniper JunOS
   - PaloAlto
   - Mikrotik
-- Adds detailed IPSec technology tables
+- Adds detailed IPsec technology tables
   - Tunnels (/technology/security/ipsec/tunnels)
   - Gateways (/technology/security/ipsec/gateways)
 - Adds Zone-Based Firewall support for the following platforms
