NIM-10399 RN - Cisco FMC update

--- a/docs/releases/release_notes/6.2.md
+++ b/docs/releases/release_notes/6.2.md
@@ -18,6 +18,9 @@ tags: ["draft"]
 ### Network Discovery
 
 - Alcatel -- Added support for basic network management (see our [feature matrix](https://matrix.ipfabric.io) for more details)
+- Cisco
+    - FMC -- Added support for HA Pairs in Zone Firewall
+    - FMC -- Added support for EtherChannels in Zone Firewall
 - Forcepoint -- NAT support was added (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - FS -- Added limited support of basic discovery (see our [feature matrix](https://matrix.ipfabric.io) for more details).
 - PaloAlto
